[tool.poetry]
name = "trading"
version = "0.1.0"
description = ""
authors = ["yahoryakubovich <officialegoryakubovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
